--- a/upload image full project.html
+++ b/upload image full project.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <label>Product Name</label> <input type="text" id="nameinp"> <br> <br>
-    <label>Product Price</label> <input type="text" id="priceinp"> <br> <br>
-    <label>Stock quantity</label> <input type="text" id="stockinp"> <br> <br>
+    <label>Product Price</label> <input type="number" id="priceinp"> <br> <br>
+    <label>Stock quantity</label> <input type="number" id="stockinp"> <br> <br>
     <label > Category</label>
     <select id="catinp">
         <option value="Keyboard & Mouse">Keyboard & Mouse</option>
@@ -43,23 +43,23 @@
         var FileReaders = [];
         var ImageLinksArray = [];
 
-        const imgdiv = document.getElementById('imagesDiv');
-        const selBtn = document.getElementById('selimgsbtn');
-        const addBtn = document.getElementById('addprodbtn');
-        const proglab = document.getElementById('loadlab');
+    const imgDiv = document.getElementById('imagesDiv');
+    const selBtn = document.getElementById('selimgsbtn');
+    const addBtn = document.getElementById('addprodbtn');
+    const proglab = document.getElementById('loadlab');
 
-        const name = document.getElementById('nameinp');
-        const category = document.getElementById('catinp');
-        const description = document.getElementById('desarea');
-        const price = document.getElementById('priceinp');
-        const stock = document.getElementById('stockinp');
+    const name = document.getElementById('nameinp');
+    const category = document.getElementById('catinp');
+    const description = document.getElementById('desarea');
+    const price = document.getElementById('priceinp');
+    const stock = document.getElementById('stockinp');
 
-        const p1 = document.getElementById('p1inp');
-        const p2 = document.getElementById('p2inp');
-        const p3 = document.getElementById('p3inp');
-        const p4 = document.getElementById('p4inp');
+    const p1 = document.getElementById('p1inp');
+    const p2 = document.getElementById('p2inp');
+    const p3 = document.getElementById('p3inp');
+    const p4 = document.getElementById('p4inp');
 
-        function OpenFileDialog() {
+    function OpenFileDialog() {
             let inp = document.createElement('input');
             inp.type = 'file';
             inp.multiple = 'multiple';
@@ -77,34 +77,162 @@
             let looplim = (num <= 10) ? thefiles.length : (10-files.length)
 
             for (let i = 0; i <  looplim; i++) {
-                files.push(TheFiles[i]);
+                files.push(thefiles[i]);
             }
 
             if(num > 10) alert("maximum 10 images are allowed!");
         }
 
         function CreateImgTags() {
-            imgdiv.innerHTML = '';
-            imgdiv.classList.add('imageDivStyle')
+            imgDiv.innerHTML = '';
+            imgDiv.classList.add('imageDivStyle')
 
-            for (let i = 0; i <  files.length; i++) {
+            for (let i = 0; i < files.length; i++) {
                 FileReaders[i] = new FileReader();
 
                 FileReaders[i].onload = function() {
                     var img = document.createElement('img');
                     img.id = 'imgNo' + i;
-                    img.classList.add('imgs');
+                    img.classList.add('img');
                     img.src = FileReaders[i].result;
-                    imgdiv.append(img)
+                    imgDiv.append(img);
                 }
 
-                FileReaders[i].readAsDataURL(files[i])
+                if(files[i]) {
+                FileReaders[i].readAsDataURL(files[i]);
+                }
+
             }
+            let lab = document.createElement('label');
+            lab.innerHTML = 'clear images';
+            lab.style = 'cursor: pointer; display: block; color: navy; font-size: 12px';
+            lab.addEventListener('click', ClearImages);
+            imgDiv.append(lab);
+        }
+
+        function ClearImages() {
+            files = [];
+            ImageLinksArray = [];
+            imgDiv.innerHTML ='';
+            imgDiv.classList.remove('imagesDivStyle')
         }
 
         selBtn.addEventListener('click', OpenFileDialog);
+        addBtn.addEventListener('click', uploadAllImages);
+
+        function UploadProgress() {
+            return 'uploaded' + ImageLinksArray.length + ' of ' + files.length
+        }
+
+        function allImagesUploaded() { // returns number
+            return ImageLinksArray.length == files.length;
+        }
+
+        function getTitle() {
+            let namey = name.value.substring(0,50);
+            return namey.replace(/[^a-zA-Z0-9]/g,"");
+        }
+
+        function uploadAllImages() {
+            selBtn.disabled = true;
+            addBtn.disabled = true;
+            ImageLinksArray = [];
+
+            for(let i = 0; i < files.length; i++) {
+                uploadImage(files[i], i);
+            }
+        }
+
+        function getPoints() {
+            let points = [];
+            if(p1.value.length>0) points.push(p1.value);
+            if(p2.value.length>0) points.push(p2.value);
+            if(p3.value.length>0) points.push(p3.value);
+            if(p4.value.length>0) points.push(p4.value);
+
+            return points
+        }
+
+        function restoreBack() {
+            selBtn.disabled = false;
+            addBtn.disabled = false;
+        }
 
 
+
+        // var imgToUpload = ImageLinksArray[0];
+        function uploadImage(imgToUpload, imgNo) {
+            const metadata = {
+                contentType: imgToUpload.type,
+            };
+
+            const storage = getStorage();
+
+            const imageAddress = "Images/" + getTitle() + "/imghash" + (imgNo+1);
+            const storageRef = sRef(storage, imageAddress);
+            const UploadTask = uploadBytesResumable(storageRef, imgToUpload,metadata);
+            UploadTask.on('state_changed',(snapshot) => {
+                proglab.innerHTML = UploadProgress();
+            },
+
+            (error) => {
+                alert("upload failed");
+            },
+
+            () => {
+                getDownloadURL(UploadTask.snapshot.ref).then((downloadURL) => {
+                    ImageLinksArray.push(downloadURL);
+                    if(allImagesUploaded()) {
+                        proglab.innerHTML = "all images uploaded";
+                        uploadProduct();
+                    }
+                });
+            }
+            );
+        }
+
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.3/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.3/firebase-analytics.js";
+        import { getStorage, ref as sRef, uploadBytesResumable, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.6.3/firebase-storage.js";
+        import { getDatabase, ref, get, set, child, update, remove } from "https://www.gstatic.com/firebasejs/9.6.3/firebase-database.js";
+        import { getFirestore, doc, getDoc, setDoc, collection, addDoc, updateDoc  } from "https://www.gstatic.com/firebasejs/9.6.3/firebase-firestore.js";
+
+        // https://firebase.google.com/docs/web/setup#available-libraries
+
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+            apiKey: "AIzaSyCI5SdwdXMQeu3y7AQPZnkcZH_GmIcSgKw",
+            authDomain: "login-9a8b6.firebaseapp.com",
+            databaseURL: "https://login-9a8b6-default-rtdb.europe-west1.firebasedatabase.app",
+            projectId: "login-9a8b6",
+            storageBucket: "login-9a8b6.appspot.com",
+            messagingSenderId: "663312681266",
+            appId: "1:663312681266:web:aaff10c5e0a58994ceaf2b",
+            measurementId: "G-XTC30ZEDBX"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+        const realdb = getDatabase();
+        const db = getFirestore();
+
+        function uploadProduct() {
+            set(ref(realdb, "test" + getTitle()),{
+                ProductTitle: name.value,
+                Category: category.value,
+                Description: description.value,
+                Price: price.value,
+                Stock: stock.value,
+                Points: getPoints(),
+                ImageLinksArray: ImageLinksArray
+            });
+
+            alert("upload succesful");
+            restoreBack();
+        }
     </script>
 
 </body>
