--- a/upload image full project_DETAIL.html
+++ b/upload image full project_DETAIL.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title id="titletop"></title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -15,33 +15,29 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
             	<li class="breadcrumb-item"><a href="upload image full project_PRODUCTS.html">Home</a></li>
-            	<li class="breadcrumb-item"><a id="categoryLink" href="#">category maybe</a></li>
-            	<li id="titleLi" class="breadcrumb-item active" aria-current="page">title maybe</li>
+            	<li class="breadcrumb-item"><a id="catlink" href="#"></a></li>
+            	<li id="titleLi" class="breadcrumb-item active" aria-current="page"></li>
             </ol>
         </nav>
 
          <div class="contentsDiv">
             <div class="imgDiv" class="mr-5">
 				<div class="bigImgDiv">
-					<img src="s-l400.jpg">
+					<img id="bigimg" src="">
 				</div>
 
 				<div class="smImgDiv">
-					<img class="smimg" src="s-l400.jpg">
-					<img class="smimg" src="s-l400.jpg">
-					<img class="smimg" src="s-l400.jpg">
-					<img class="smimg" src="s-l400.jpg">
+
 				</div>
 
 				<div id="detailsDiv">
 					<h4 id="title">Lorem, ipsum.</h4>
 					<ul id="points">
-						<li>Lorem ipsum dolor sit amet.</li>
-						<li>Lorem ipsum dolor sit amet.</li>
-						<li>Lorem ipsum dolor sit amet.</li>
-						<li>Lorem ipsum dolor sit amet.</li>
+
 					</ul>
-					<p id="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, hic!</p>
+					<p id="description">
+
+					</p>
 					<h3 id="price">10 </h3>
 					<div id="btnDiv" class="mt-3">
 						<button class="btn btn-lg btn-warning mr2">Add to Cart</button>
@@ -53,5 +49,57 @@
 
 		</div>
     </div>
+
+	<script>
+		let product = null;
+
+		window.onload = function() {
+			product = localStorage.Product;
+			if(product) {
+				product = JSON.parse(product);
+				LoadProduct();
+			}
+		}
+
+		function LoadProduct() {
+			document.getElementById('titleLi').innerHTML = product.ProductTitle;
+			document.getElementById('titletop').innerHTML = product.ProductTitle;
+			document.getElementById('catlink').innerHTML = product.Category;
+			document.getElementById('bigimg').src = product.ImageLinksArray[0];
+			document.getElementById('title').innerHTML = product.ProductTitle;
+			document.getElementById('description').innerHTML = product.Description;
+			document.getElementById('price').innerHTML =  product.Price + " €";
+			if(product.stock < 1 )document.getElementById('btnDiv').innerHTML = '<h3 class="text-warning"> Out of Stock</h3>';
+			genLi();
+		}
+
+		function genLi() {
+			product.Points.forEach(html => {
+				if(html.length > 1){
+					var li = document.createElement('li');
+					li.innerHTML = html;
+					document.getElementById('points').append(li);
+				}
+			});
+		}
+
+		function genImg(){
+			let i = 1;
+			let html = '';
+			product.ArrayOfImages.forEach(imglink => {
+				let img = document.createElement('img');
+				img.src = imglink;
+				img.classList.add("smimg","mr-2","mb-2");
+				img.id = "im" + (i++);
+				img.addEventListener('click',ChangeBigImg);
+				document.getElementById('smImgDiv').append(img);
+			});
+		}
+
+		function ChangeBigImg(event) {
+			let elem = document.getElementById(event.target.id);
+			document.getElementById('bigimg').src = elem.src;
+		}
+	</script>
 </body>
 </html>
