--- a/upload image full project_PRODUCTS.html
+++ b/upload image full project_PRODUCTS.html
@@ -13,27 +13,141 @@
 </head>
 <body>
     <div id="productsDiv" class="container">
-        <div class="productCard">
 
-            <img src="s-l400.jpg" class="thumb mt-2" id="thumb1">
-            <p class="title" id="title1"> Lorem ipsum dolor sit.</p>
-            <ul class="points">
-                <li>Lorem ipsum dolor sit amet consectetur.</li>
-                <li>Lorem ipsum dolor sit amet consectetur.</li>
-                <li>Lorem ipsum dolor sit amet consectetur.</li>
-                <li>Lorem ipsum dolor sit amet consectetur.</li>
-            </ul>
-            <h5>20€</h5>
-            <button class="detbtn btn" id="detbtn">View details</button>
-        </div>
     </div>
 
-    <script>
-        function getShortTitle(){
-            if(title.lenght > 49) title = title.substring(0,47);
-            else return title;
-            return title + "..."
+    <script type="module">
+
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.3/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.3/firebase-analytics.js";
+    import { getStorage, ref as sRef, uploadBytesResumable, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.6.3/firebase-storage.js";
+    import { getDatabase, ref, get, set, child, update, remove } from "https://www.gstatic.com/firebasejs/9.6.3/firebase-database.js";
+    import { getFirestore, doc, getDoc, setDoc, collection, addDoc, updateDoc  } from "https://www.gstatic.com/firebasejs/9.6.3/firebase-firestore.js";
+
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+        apiKey: "AIzaSyCI5SdwdXMQeu3y7AQPZnkcZH_GmIcSgKw",
+        authDomain: "login-9a8b6.firebaseapp.com",
+        databaseURL: "https://login-9a8b6-default-rtdb.europe-west1.firebasedatabase.app",
+        projectId: "login-9a8b6",
+        storageBucket: "login-9a8b6.appspot.com",
+        messagingSenderId: "663312681266",
+        appId: "1:663312681266:web:aaff10c5e0a58994ceaf2b",
+        measurementId: "G-XTC30ZEDBX"
+    };
+
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+    const realdb = getDatabase();
+    const db = getFirestore();
+
+    var outerDiv = document.getElementById('productsDiv');
+    var arrayOfProducts = [];
+    window.addEventListener('load',GetAllProducts);
+
+    function GetAllProducts() {
+        const dbref= ref(realdb);
+
+        get(child(dbref, "test"))
+        .then((snapshot) =>  {
+            snapshot.forEach(prod => {
+                arrayOfProducts.push(prod.val());
+            });
+            addAllProducts();
+        })
+    }
+
+    function addAllProducts() {
+        let i = 0;
+        arrayOfProducts.forEach(prod => {
+            addProduct(prod, i++)
+        });
+    }
+
+    function addProduct(product, index) {
+        let html =
+        `
+        <img src="${product.ImageLinksArray[0]}" class="thumb mt-2" id="thumb-${index}">
+        <p class="title" id="title-${index}">${getShortTitle(product.ProductTitle)}</p>
+        `+
+        GetUl(product.Points)
+        +
+        getStockLabel(product.Stock)
+        +
+        `
+        <h5 class="price">${product.Price} €</h5>
+        <button class="detbtn btn" id="detbtn-${index}">View details</button>
+        `
+
+        let newProd = document.createElement('div');
+        newProd.classList.add('productcard');
+        newProd.innerHTML = html;
+        outerDiv.append(newProd);
+    }
+
+    function GenerateStockLabel(stock) {
+        let stocklabel = document.createElement('h5');
+        stocklabel.classList.add('stock');
+
+        if(stock > 0) {
+            stocklabel.innerHTML = 'in stock';
+            stocklabel.classList.add('text-success');
         }
+        else {
+            stocklabel.innerHTML = 'out of stock';
+            stocklabel.classList.add('text-warning');
+        }
+        return stocklabel.outerHTML;
+    }
+
+    function getUl(array) {
+        let ul = document.createElement('ul');
+        ul.classList.add('points');
+
+        array.forEach(element => {
+            let li = document.createElement('li')
+            li.innerText = element;
+            ul.append(li);
+        });
+        return ul.outerHTML;
+    }
+
+    function getShortTitle(title){
+        if(title.lenght > 49) title = title.substring(0,47);
+        else return title;
+        return title + "..."
+    }
+
+    function getProductIndex(id) {
+        var indstart = id.indexOf('-') + 1;
+        var indend= id.lenght;
+        return Number(id.substring(indstart,indend));
+    }
+
+    function goToProductDetails(event) {
+        var index = getProductIndex(event.target.id);
+        localStorage.product = JSON.stringify(arrayOfProducts[index]);
+        window.location = "upload image full project_DETAIL.html";
+    }
+
+    function assingAllEvent() {
+        var btns = document.getElementsByClassName('detbtn');
+        var titles = document.getElementsByClassName('title');
+        var thumbs = document.getElementsByClassName('thumb');
+
+        for(let i = 0; i < btns.length; i++) {
+            btns[i].addEventListener('click',goToProductDetails);
+            titles[i].addEventListener('click',goToProductDetails);
+            thumbs[i].addEventListener('click',goToProductDetails);
+        }
+    }
+
     </script>
 
 </body>
